--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -1,5 +1,5 @@
 baseURL: /
-title: Eureka Demo
+title: Nobody
 
 # Uncomment when not installing with Hugo Modules
 # theme: eureka
@@ -7,7 +7,7 @@ title: Eureka Demo
 theme: wangchucheng.com/hugo-eureka
 # If you cannot access the Github mirror, you can also use the Gitee mirror: gitee.com/wangchucheng/hugo-eureka
 
-paginate: 3
+paginate: 10
 copyright: >
   &copy; 2021 <a href="https://www.wangchucheng.com/">WANG Chucheng</a> and <a
   href="https://www.ruiqima.com/">MA Ruiqi</a>
