--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,8 +2,8 @@ main:
   - name: About
     url: '#about'
     weight: 1
-  - name: Posts
-    url: /posts/
+  - name: Notes
+    url: /notes/
     weight: 2
   - name: Docs
     url: /docs/
