--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -9,8 +9,7 @@ theme: wangchucheng.com/hugo-eureka
 
 paginate: 10
 copyright: >
-  &copy; 2021 <a href="https://www.wangchucheng.com/">WANG Chucheng</a> and <a
-  href="https://www.ruiqima.com/">MA Ruiqi</a>
+  &copy; 2023 <a href="https://bitcoin.org/bitcoin.pdf">Satoshi Blogamoto
 enableEmoji: true
 enableGitInfo: false
 summaryLength: 75
