--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -1,6 +1,6 @@
 mainSections:
-  - posts
-description: Eureka is a elegant and powerful theme for Hugo.
+  - notes
+description: Not a dull moment
 
 repoEditURL:
 
@@ -17,7 +17,7 @@ style:
 # E.g. Person, Organization, LocalBusiness, Project, EducationalOrganization
 siteType: Person
 icon: images/icon.png
-publisherName: WANG Chucheng
+publisherName: Satoshi Blogamoto
 publisherLogo:
 
 highlight:
