--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -2,12 +2,15 @@ main:
   - name: About
     url: '#about'
     weight: 1
-  - name: Notes
-    url: /notes/
+  - name: Bitcoin
+    url: /bitcoin/
     weight: 2
-  - name: Docs
-    url: /docs/
+  - name: Books
+    url: /books/
     weight: 3
   - name: AI
     url: /AI/
-    weight: 4  
+    weight: 4
+  - name: Notes
+    url: /notes/
+    weight: 5
